--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
+
 # PostgreSQL Connection
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/Intensivo_spring
 spring.datasource.username=${DB_USER}
