CORS config, application-dev,prod

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@
 # spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 # PostgreSQL Connection
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/Intensivo_spring
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME_INTENSIVO}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
